# pq_SA

./: .gitignore  Cargo.toml  ERC-XXXX.md  LICENSE  README.md  bench_results.json  ethresearch_post.md
contracts/src/: MemoRegistry.sol  NoteRegistry.sol
contracts/test/: MemoRegistry.t.sol  NoteRegistry.t.sol
crates/baseline/: Cargo.toml
crates/baseline/src/: main.rs
crates/bench/: Cargo.toml
crates/bench/src/: main.rs
crates/classical/: Cargo.toml
crates/classical/src/: main.rs
crates/demo/: Cargo.toml
crates/demo/src/: main.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: aead.rs  channel.rs  commitment.rs  erasure.rs  hybrid_kem.rs  lib.rs  note.rs  shard.rs  stealth.rs
crates/primitives/tests/: e2e.rs
crates/recipient/: Cargo.toml
crates/recipient/src/: main.rs
crates/sender/: Cargo.toml
crates/sender/src/: main.rs
crates/sidecar/: Cargo.toml
crates/sidecar/src/: lib.rs
