[package]
name = "bench"
version = "0.1.0"
edition = "2021"

[dependencies]
primitives = { path = "../primitives" }
ml-kem.workspace = true
kem.workspace = true
chacha20poly1305.workspace = true
hkdf.workspace = true
sha2.workspace = true
rand.workspace = true
rand_chacha.workspace = true
hex.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
