[package]
name = "bench"
version = "0.1.0"
edition = "2021"

[dependencies]
primitives = { path = "../primitives" }
ml-kem.workspace = true
kem.workspace = true
secp256k1.workspace = true
hkdf.workspace = true
sha2.workspace = true
rand.workspace = true
rand_chacha.workspace = true
hex.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
