[package]
name = "classical"
version = "0.1.0"
edition = "2021"

[dependencies]
secp256k1.workspace = true
chacha20poly1305.workspace = true
hkdf.workspace = true
sha2.workspace = true
rand.workspace = true
rand_chacha.workspace = true
hex.workspace = true
alloy = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
eyre = "0.6"
