[package]
name = "primitives"
version = "0.1.0"
edition = "2021"

[dependencies]
ml-kem.workspace = true
kem.workspace = true
secp256k1.workspace = true
chacha20poly1305.workspace = true
hkdf.workspace = true
sha2.workspace = true
hmac.workspace = true
reed-solomon-erasure.workspace = true
rand.workspace = true
rand_chacha.workspace = true
serde.workspace = true
hex.workspace = true

[dev-dependencies]
rand_chacha.workspace = true
