[package]
name = "primitives"
version = "0.1.0"
edition = "2021"

[dependencies]
ml-kem.workspace = true
kem.workspace = true
secp256k1.workspace = true
hkdf.workspace = true
sha2.workspace = true
sha3.workspace = true
zeroize.workspace = true
rand.workspace = true
rand_chacha.workspace = true
hex.workspace = true

[dev-dependencies]
rand_chacha.workspace = true
